--- a/index.html
+++ b/index.html
@@ -124,6 +124,59 @@
 
             </div>
         </section>
-            
-        </body>
-    </html>
+        <!-- latest deal section -->
+        <section>
+            <div class="latest-deal-section">
+                <h1 class="latest-heading">Get The Latest Deals</h1>
+                <p class="latest-description">$30 coupon for first shopping</p>
+                <input class="latest-input" placeholder="Enter your email here ......." type="email" name="" id="">
+                <button class="hot-deal-btn">Subcribe</button>
+            </div>
+        </section>
+
+        <!-- Bonus Section -->
+        <!-- Order Section -->
+        <section>
+            <h1 class="order-heading">Order Here</h1>
+            <p class="info-para">If you want to order flower from our shop <br> please provide your information and
+                payment below.</p>
+
+
+            <div class="order-container">
+                <div class="information">
+                    <h2 class="information-heading">Give Your Information</h2>
+                    <form>
+                        <label for="firstname">First name:</label>
+                        <input class="input-1" type="text" id="firstname" name="firstname"><br><br>
+                        <label for="lastname">Last name:</label>
+                        <input class="input-1" type="text" id="lastname" name="lastname"><br><br>
+                        <label for="">Phone Number: </label>
+                        <input placeholder="No......." class="input-3" type="text" id="lastname"
+                            name="lastname"><br><br>
+                        <label for="firstname">Give your email:</label>
+                        <input placeholder="......." class="input-2" type="text" id="firstname"
+                            name="firstname"><br><br>
+                        <Label>Give your address:</Label>
+                        <input class="input-4" placeholder="address..." type="text">
+                    </form>
+                    <button class="input-btn">Submit Here</button>
+                </div>
+
+                <div class="payment-container">
+                    <h1 class="payment-heading">Payment Area</h1>
+                    <h3>Give your order description : </h3>
+                    <input class="order-description" type="text">
+                    <button class="order-description-btn">Submit Here</button>
+                    <h1 class="payment">Confirm your Payment : <span><button class="payment-btn"> Pay
+                                Now</button></span></h1>
+                    <h2 class="helpline-no">Our Helpline No- <span class="off-color">09216328</span></h2>
+                </div>
+
+            </div>
+
+        </section>
+    </main>
+
+</body>
+
+</html>
