--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
 
         </section>
     </main>
+    <footer>
+        <h1 class="footer-heading"><span class="off-color">Flower</span>Shop</h1>
+        <p class="footer-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        <p class="copyright">@2020-2024, Jahan Minara. All rights reserved. </p>
+
+    </footer>
 
 </body>
 
